2019-1/220/users/4267/executions/1711_3032.log
== TEST (2019-05-02 21:16:27) 
-- CODE:
from math import *

-- OUTPUT:
97.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:20:02) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
	x=1
	print(x)
	else:
		if(x>1 and x<=2):
			x=(x^(0.5))
			print(x)
		else:
			if(x>2):
				x=(x^(1/3))
				print(x)
-- ERROR:
File "XXXX", line 8
    x=1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:20:16) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
	x=1
	print(x)
	else:
		if(x>1 and x<=2):
		x=(x^(0.5))
		print(x)
		else:
			if(x>2):
			x=(x^(1/3))
			print(x)
-- ERROR:
File "XXXX", line 8
    x=1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:20:34) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
		x=1
		print(x)
	else:
		if(x>1 and x<=2):
			x=(x^(0.5))
			print(x)
		else:
			if(x>2):
				x=(x^(1/3))
				print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:21:02) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
		x=1
		print(x)
	else:
		if(x>1 and x<=2):
			x=(x**(0.5))
			print(x)
		else:
			if(x>2):
				x=(x**(1/3))
				print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:21:27) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
		x=1
		print(x)
	else:
		if(x>1 and x<=2):
			x=(x**(0.5))
			print(round(x,4))
		else:
			if(x>2):
				x=(x**(1/3))
				print(round(x,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:21:37) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
		x=1
		print(x)
	else:
		if(x>1 and x<=2):
			x=(x**(0.5))
			print(round(x,4))
		else:
			if(x>2):
				x=(x**(1/3))
				print(round(x,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 21:21:44) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
		x=1
		print(x)
	else:
		if(x>1 and x<=2):
			x=(x**(0.5))
			print(round(x,4))
		else:
			if(x>2):
				x=(x**(1/3))
				print(round(x,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:21:51) 
-- CODE:
from math import *
x = float(input("Digite o valor de x: "))
if(x<=0):
	x=0
	print(x)
else:
	if(x>0 and x<=1):
		x=1
		print(x)
	else:
		if(x>1 and x<=2):
			x=(x**(0.5))
			print(round(x,4))
		else:
			if(x>2):
				x=(x**(1/3))
				print(round(x,4))
-- EXECUTION TIME:
0.170506
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
